[gd_scene load_steps=6 format=3 uid="uid://kvvjm6b7idrn"]

[ext_resource type="FontFile" uid="uid://byxfi3b16obej" path="res://assets/fonts/Pixellettersfull-BnJ5.ttf" id="1_n0dtb"]
[ext_resource type="Script" path="res://intro.gd" id="1_xvby1"]

[sub_resource type="LabelSettings" id="LabelSettings_rci07"]
font = ExtResource("1_n0dtb")
font_size = 1000

[sub_resource type="Animation" id="Animation_psuro"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d8yh2"]
_data = {
"fade": SubResource("Animation_psuro")
}

[node name="intro" type="Node2D"]
script = ExtResource("1_xvby1")

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(0.05, 0.05)
text = "Sargento Koswowski

A situacao na Polonia nao parece ser das melhores

Tropas do eixo ja invadiram todo o territorio leste e aparentemente
seu programa de criacao de criaturas monstruosas e soldados com
armaduras invulneraveis esta sendo muito bem sucedido...

Entendemos sua natureza como medico, nao se preocupe, nenhum 
ser humano sera ferido em missao a nao ser claro [----]

Consiga para nos os planos deles e tente fazer o maior estrago
possivel... Existe apenas guerra la fora"
label_settings = SubResource("LabelSettings_rci07")

[node name="Button" type="Button" parent="."]
offset_left = 716.0
offset_top = 583.0
offset_right = 3716.0
offset_bottom = 1483.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_n0dtb")
theme_override_font_sizes/font_size = 1000
text = "Tutorial"

[node name="Button2" type="Button" parent="."]
offset_left = 905.0
offset_top = 583.0
offset_right = 3905.0
offset_bottom = 1483.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_n0dtb")
theme_override_font_sizes/font_size = 1000
text = "Jogar"

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d8yh2")
}

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
